kubernetes/apps/kerberos/factory/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factory
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: factory
    spec:
      replicas: 1
      containers:
      - name: factory
        image: "uugai/factory:v1.0.7" # or you can use "uugai/factory:latest"
        #imagePullPolicy: Always
        resources:
          requests:
            memory: 20Mi
            cpu: 25m
          limits:
            memory: 50Mi
            cpu: 50m
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: factory-lb
  labels:
    app: factory
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  selector:
    app: factory
