kubernetes/apps/kerberos/factory/app/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: factory
  labels:
    app: factory
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  selector:
    app: factory
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factory
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gs-farm.net
    kubernetes.io/ingress.class: external
    meta.helm.sh/release-name: kerberos
    meta.helm.sh/release-namespace: kerberos
    kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: traefik
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: external
  tls:
  - hosts:
    - factory.gs-farm.net
    secretName: factory-tls
  rules:
  - host: factory.gs-farm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: factory
            port: 
              number: 80
status:
  loadBalancer:
    ingress:
    - ip: 10.10.1.152
